--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <title>Ficha</title>
-    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/logos.png">
+    <link rel="icon" href="/bombeiroSa - versao atual/icon.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/icon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
 
