--- a/bombeiroSa - versao atual/index.html
+++ b/bombeiroSa - versao atual/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/logos.png">
+    <link rel="icon" href="/bombeiroSa - versao atual/icon.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
