--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil</title>
-  <link rel="icon" href="/bombeiroSa - versao atual/icon.png" type="image/png">
-  <link rel="icon" type="image/x-icon" href="/bombeiroSa - versao atual/icon.png">
+  <link rel="icon" href="/../icon.png" type="image/png">
+  <link rel="icon" type="image/x-icon" href="/../icon.png">
   
   <style>
     body {
