--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -430,7 +430,9 @@
 
     /* Estilos para telas médias (exemplo: tablets) */
     @media (min-width: 767px) and (max-width: 1024px) {
-
+        .container{
+            padding: 60px;
+        }
         .duo {
             column-count: 2;
         }
@@ -443,7 +445,9 @@
 
     /* Estilos para telas grandes (exemplo: desktops) */
     @media (min-width: 1025px) {
-
+        .container{
+            padding: 80px;
+        }
         .duo {
             column-count: 3;
         }
