--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -1053,10 +1053,10 @@
                                 </td>
                             </tr>
                             <th colspan="2"><label for="glasgow">TOTAL (GCS)(3-15)</label><br>
-                                <input type="text" id="glasgow" name="glasgow" placeholder="Digite" required />
+                                <input type="text" id="glasgow" class="form-control" name="glasgow" placeholder="Digite" required />
                             </th>
                             <th colspan="2"><label for="glasgow">TOTAL (GCS)(3-15)</label><br>
-                                <input type="text" id="glasgow" name="glasgow" placeholder="Digite" required />
+                                <input type="text" id="glasgow"  class="form-control" name="glasgow" placeholder="Digite" required />
                             </th>
                         </table>
                     </div>
@@ -1194,7 +1194,7 @@
                         <div class="destaque2">
                             <input type="checkbox" class="glas" id="prob-outros" name="prob-outros" value="prob-outros">
                             <label for="prob-outros">Outros:</label><br>
-                            <input type="text" class="form-control" id="prob-outros" name="prob-outros"
+                            <input type="text"  class="form-control" id="prob-outros" name="prob-outros"
                                 placeholder="Digite os outros" required />
                         </div>
                     </div>
