--- a/bombeiroSa/index.html
+++ b/bombeiroSa/index.html
@@ -115,7 +115,7 @@
     </div>
     <div class="container">
         <div class="heading">Login</div>
-        <form action="" method="POST" class="form" onsubmit="return validateForm()">
+        <form action="conexão.php" method="POST" class="form" onsubmit="return validateForm()">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="password" name="password" id="password" placeholder="Senha">
             <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
