--- a/bombeiroSa - versao atual/index.html
+++ b/bombeiroSa - versao atual/index.html
@@ -118,7 +118,7 @@
         <form action="" method="POST" class="form">
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
-            <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
+            <span class="forgot-password"><a href="">Esqueceu a senha?</a></span>
             <button class="login-button" type="submit"><a href="perfil.html">Entrar</a></button>
         </form>
 
