--- a/bombeiroSa/index.html
+++ b/bombeiroSa/index.html
@@ -119,7 +119,7 @@
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="password" name="password" id="password" placeholder="Senha">
             <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit">Entrar</button>
+            <button class="login-button" type="submit"><a href="perfil.html">Entrar</a></button>
         </form>        
     </div>
     <script>
