--- a/bombeiroSa/fi.html
+++ b/bombeiroSa/fi.html
@@ -571,6 +571,17 @@ body     {
             <h3>Assoc. de Serviços Sociais Voluntários de Guaramirim</h3>
         </div>
 
+        <div class="foco__content">
+            <form>
+                <div class="destaque2">
+                    <label for="example-input">Label for Input:</label>
+                    <input type="text" id="example-input" name="example-input" placeholder="Enter something" required />
+                </div>
+                    
+                </div>
+            </form>
+        </div>
+
         <div class="container">
             <form class="form">
                 <div class="form-group">
