--- a/bombeiroSa/ficha.html
+++ b/bombeiroSa/ficha.html
@@ -2919,7 +2919,7 @@
                 <br>
 
                 <div class="button-group">
-                    <button class="tonn"><a href="perfil.html">Salvar</a></button>
+                    <button class="login-button" type="submit" name="enviar"><a href="perfil.html">Salvar</a></button>
                 </div>
         </div>
     </form>
