--- a/bombeiroSa/login.html
+++ b/bombeiroSa/login.html
@@ -114,12 +114,12 @@
         <img src="logos.png" alt="Logo" />
     </div>
     <div class="container">
-        <div class="heading">Cadastro</div>
+        <div class="heading">Login</div>
         <form action="conexão.php" method="POST" class="form" onsubmit="return validateForm()">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
             <span class="forgot-password"><a href="index.html">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit" name="enviar"><a href="login.html">Entrar</a></button>
+            <button class="login-button" type="submit" name="enviar"><a href="perfil.html">Entrar</a></button>
         </form>
     </div>
     
