--- a/BombeiroSa - atual/ficha.html
+++ b/BombeiroSa - atual/ficha.html
@@ -1776,7 +1776,7 @@
 
                 <fieldset>
                     <legend>Materiais Utilizados Descartável</legend>
-                    <div class="table">
+                    <div class="responsive-table">
                         <table>
                             <tr>
                                 <th>Material</th>
@@ -1918,7 +1918,7 @@
 
                 <fieldset>
                     <legend>Materiais Utilizados Deixado no Hospital</legend>
-                    <div class="table">
+                    <div class="responsive-table">
                         <table>
                             <tr>
                                 <th>Material</th>
