--- a/BombeiroSa - atual/ficha.html
+++ b/BombeiroSa - atual/ficha.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="header">
-        <div class="imgg">
+        <div class="img">
             <img src="logos.png" width="35%">
         </div>
     </div>
@@ -319,7 +319,7 @@
                     <div class="destaque2">
                         <div class="duo">
                             <div>Que horas iniciaram as contrações?</div>
-                            <input type="text" class="qh" placeholder="00:00">
+                            <input type="number" class="qh" id="h-contracoes" placeholder="00:00">
                         </div>
                     </div>
 
@@ -328,11 +328,11 @@
                             <div>Tempo das contrações:</div>
                             <div class="duo">
                                 <div>Duração:</div>
-                                <input type="text" class="qh" placeholder="00:00">
+                                <input type="number" class="qh" placeholder="00:00">
                             </div>
                             <div class="duo">
                                 <div>Intervalo:</div>
-                                <input type="text" class="qh" placeholder="00:00">
+                                <input type="number" class="qh" placeholder="00:00">
                             </div>
                         </div>
                     </div>
@@ -1776,7 +1776,7 @@
 
                 <fieldset>
                     <legend>Materiais Utilizados Descartável</legend>
-                    <div class="responsive-table">
+                    <div class="table">
                         <table>
                             <tr>
                                 <th>Material</th>
@@ -1918,7 +1918,7 @@
 
                 <fieldset>
                     <legend>Materiais Utilizados Deixado no Hospital</legend>
-                    <div class="responsive-table">
+                    <div class="table">
                         <table>
                             <tr>
                                 <th>Material</th>
