--- a/bombeirosSAgi/perfil.html
+++ b/bombeirosSAgi/perfil.html
@@ -14,7 +14,7 @@
 
   <div class="header">
     <div class="logged-in-user">
-      <?php
+      <!-- <?php
       $servername = "localhost";
       $username = "root";
       $password = "root";
@@ -40,7 +40,7 @@
         }
         $conn->close();
       ?>
-    </div>
+    </div> -->
     <a href="#">
       <img class="gif"
         src="https://www.imagensanimadas.com/data/media/1193/caminhao-de-bombeiro-imagem-animada-0009.gif"
