--- a/bombeirosSAgi/cadastro.html
+++ b/bombeirosSAgi/cadastro.html
@@ -118,36 +118,10 @@
         <form action="cadastro.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
-            <!-- <span class="forgot-password"><a href="index.html">;-;</a></span> -->
-            <button class="login-button" type="submit" name="enviar">Entrar</button>
+            <span class="forgot-password"><a href="index.html">;-;</a></span>
+            <button class="login-button" type="submit" name="enviar">Cadastrar</button>
         </form>
     </div>
-
-    <!-- <script>
-        function validateForm() {
-            fetch('conexão.php', {
-                method: 'POST',
-                body: new FormData(document.querySelector('form')),
-            })
-                .then(response => response.json())
-                .then(data => {
-                    var lista = data.usuarios;
-                    var tabela = $('table tbody')
-                    tabela.empty();
-
-                    for (x = 0; x < lista.length; x++) {
-                        console.log(lista[x].email);
-                        console.log(lista[x].senha);
-                        console.log(" ");
-                    }
-                })
-                .catch(error => {
-                    console.error("Ocorreu um erro ao enviar os dados: " + error);
-                });
-
-            return false; // Evita que o formulário seja enviado da maneira tradicional
-        }
-    </script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
