--- a/bombeirosSAgi/index.html
+++ b/bombeirosSAgi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="icon" href="/../icon.png" type="image/png">
     <link rel="icon" type="image/x-icon" href="/../icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -118,7 +118,7 @@
         <form action="cadastro.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
-            <span class="forgot-password"><a href="index.html">;-;</a></span>
+            <span class="forgot-password"><a href="">;-;</a></span>
             <button class="login-button" type="submit" name="enviar">Cadastrar</button>
         </form>
     </div>
