--- a/bombeirosSAgi/login.html
+++ b/bombeirosSAgi/login.html
@@ -118,7 +118,7 @@
         <form action="login.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
-            <span class="forgot-password"><a href="cadastro.html">Esqueceu a senha?</a></span>
+            <span class="forgot-password"><a href="index.html">Esqueceu a senha?</a></span>
             <button class="login-button" type="submit" name="enviar">Entrar</a></button>
         </form>
     </div>
