--- a/bombeirosSAgi/login.html
+++ b/bombeirosSAgi/login.html
@@ -119,7 +119,7 @@
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
             <span class="forgot-password"><a href="index.html">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit" name="enviar">Entrar</a></button>
+            <button class="login-button" type="submit" name="enviar">Entrar</button>
         </form>
     </div>
 
