--- a/bombeirosSAgi/cadastro.html
+++ b/bombeirosSAgi/cadastro.html
@@ -105,7 +105,7 @@
         .form .login-button a {
             color: white;
             text-decoration: none;
-        } 
+        }
     </style>
 </head>
 
@@ -114,19 +114,19 @@
         <img src="logos.png" alt="Logo" />
     </div>
     <div class="container">
-        <div class="heading">Login</div>
-        <form action="login.php" method="POST" class="form">
+        <div class="heading">Cadastro</div>
+        <form action="cadastro.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
-            <span class="forgot-password"><a href="cadastro.html">Esqueceu a senha?</a></span>
-            <button class="login-button" type="submit" name="enviar">Entrar</a></button>
+            <span class="forgot-password"><a href="index.html">;-;</a></span>
+            <button class="login-button" type="submit" name="enviar">Cadastrar</button>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </body>
 
