--- a/bombeirosSAgi/ficha.html
+++ b/bombeirosSAgi/ficha.html
@@ -253,7 +253,7 @@
                         <div class="destaque2">
                             <div>Período da gestação</div>
                             <div>
-                                <input class="oa" type="text" id="nome-hospital" name="nome-hospital"
+                                <input class="oa" type="text" id="periodo_gestacao" name="periodo_gestacao"
                                     placeholder="Digite o nome do Hospital" />
                             </div>
                         </div>
@@ -1550,7 +1550,7 @@
 
                             <div class="destaque2">
                                 <div class="emoji">&#128577;<br>
-                                    <input type="checkbox" class="espacito" id="id_decisaotransporte"
+                                    <input type="checkbox" class="espacito" id="decisao_transporte"
                                         name="id_decisaotransporte" value="decisao_transporte">
                                     <label for="decisao_transporte">Crítico</label>
                                 </div>
@@ -1558,7 +1558,7 @@
 
                             <div class="destaque2">
                                 <div class="emoji">&#128534;<br>
-                                    <input type="checkbox" class="espacito" id="id_decisaotransporte"
+                                    <input type="checkbox" class="espacito" id="decisao_transporte"
                                         name="id_decisaotransporte" value="decisao_transporte">
                                     <label for="decisao_transporte">Instável</label>
                                 </div>
@@ -1566,7 +1566,7 @@
 
                             <div class="destaque2">
                                 <div class="emoji">&#128528;<br>
-                                    <input type="checkbox" class="espacito" id="id_decisaotransporte"
+                                    <input type="checkbox" class="espacito" id="decisao_transporte"
                                         name="id_decisaotransporte" value="decisao_transporte">
                                     <label for="decisao_transporte">Potencialmente instável</label>
                                 </div>
@@ -1574,7 +1574,7 @@
 
                             <div class="destaque2">
                                 <div class="emoji">&#128578;<br>
-                                    <input type="checkbox" class="espacito" id="id_decisaotransporte"
+                                    <input type="checkbox" class="espacito" id="decisao_transporte"
                                         name="id_decisaotransporte" value="decisao_transporte">
                                     <label for="decisao_transporte">Deitada</label>
                                 </div>
@@ -1886,7 +1886,7 @@
                                             <label for="ataduras_qt">20</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1897,7 +1897,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="manta_aluminizada_qt">
                                         <label for="manta_aluminizada_qt">Manta aluminizada</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1908,7 +1908,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="cateter_tp_oculos_qt">
                                         <label for="cateter_tp_oculos_qt">Cateter TP. Ocúlos</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1919,7 +1919,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="pas_dea_qt">
                                         <label for="pas_dea_qt">Pás do DEA</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1930,7 +1930,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="compressa_comum_qt">
                                         <label for="compressa_comum_qt">Compressa comum</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1941,7 +1941,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="sonda_aspiracao_qt">
                                         <label for="sonda_aspiracao_qt">Sonda de aspiração</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1963,7 +1963,7 @@
                                             <label for="kits_qt">Q</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1974,7 +1974,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="soro_fisiologico_qt">
                                         <label for="soro_fisiologico_qt">Soro fisiológico</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -1985,7 +1985,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="luvas_desc_pares_qt">
                                         <label for="luvas_desc_pares_qt">Luvas Desc. (Pares)</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2004,7 +2004,7 @@
                                             <label for="talas_pap_qt">G</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2015,7 +2015,7 @@
                                             name="id_materiaisutilizadosdescartaveis" value="mascara_desc_qt">
                                         <label for="mascara_desc_qt">Máscara Desc.</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2027,7 +2027,7 @@
                                         <input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisutilizadosdescartaveis"
+                                    <td><input class="qt" type="text" id="quantidade_mud"
                                             name="id_materiaisutilizadosdescartaveis" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2071,7 +2071,7 @@
                                             <label for="ttf_qt">Infa.</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2093,7 +2093,7 @@
                                             <label for="colar_qt">P</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2104,7 +2104,7 @@
                                             name="id_materiaisdeixadoshospital" value="tirante_aranha_qt">
                                         <label for="tirante_aranha_qt">Tirante Aranha</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2127,7 +2127,7 @@
                                                 name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2138,7 +2138,7 @@
                                             name="id_materiaisdeixadoshospital" value="tirante_cabeca_qt">
                                         <label for="tirante_cabeca_qt">Tirante de Cabeça</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2149,7 +2149,7 @@
                                             name="id_materiaisdeixadoshospital" value="coxins_estabilizacao_qt">
                                         <label for="coxins_estabilizacao_qt">Coxins Estabiliza.</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2160,7 +2160,7 @@
                                             name="id_materiaisdeixadoshospital" value="canula_qt">
                                         <label for="canula_qt">Cânula</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite">
                                     </td>
                                 </tr>
@@ -2179,7 +2179,7 @@
                                             <label for="ked_qt">Infa.</label>
                                         </div>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2190,7 +2190,7 @@
                                             name="id_materiaisdeixadoshospital" value="maca_rigida_qt">
                                         <label for="maca_rigida_qt">Maca Rígida</label>
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2202,7 +2202,7 @@
                                         <input class="qt" type="text" id="id_materiaisdeixadoshospital"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
-                                    <td><input class="qt" type="text" id="id_materiaisdeixadoshospital"
+                                    <td><input class="qt" type="text" id="quantidade_mdh"
                                             name="id_materiaisdeixadoshospital" placeholder="Digite" />
                                     </td>
                                 </tr>
@@ -2846,7 +2846,7 @@
                     <br>
 
                     <fieldset>
-                        <legend>Avaliaçãoda Cinemática</legend>
+                        <legend>Avaliação Cinemática</legend>
                         <div>
                             <div class="destaque2">
                                 <div>Distúrbio de Comportamento</div>
