surto com a ficha

--- a/bombeirosSAgi/login.html
+++ b/bombeirosSAgi/login.html
@@ -117,7 +117,7 @@
         <div class="heading">Login</div>
         <form action="login.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
-            <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
+            <input required class="input" type="password" name="senha" id="senha" placeholder="Senha">
             <span class="forgot-password"><a href="cadastro.html">Esqueceu a senha?</a></span>
             <button class="login-button" type="submit" name="enviar">Entrar</a></button>
         </form>
