--- a/bombeirosSAgi/ficha.html
+++ b/bombeirosSAgi/ficha.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="container">
-            <form class="form" action="ficha.php" method="post">
+            <form class="form" id="ocorrencia-form" action="ficha.php" method="post">
                 <div class="form-group">
 
                     <fieldset>
@@ -109,7 +109,7 @@
                             <div class="destaque2">
                                 <div class="duo">
                                     <div>Horário da útima medicação:</div>
-                                    <input type="text" class="qh" id="ultimo_horario_medicacao" placeholder="00:00">
+                                    <input type="text" class="qh" id="ultimo_horario_medicacao" placeholder="HH:MM">
                                 </div>
                             </div>
 
@@ -164,7 +164,7 @@
                             <div class="destaque2">
                                 <div class="duo">
                                     <div>Que horas?:</div>
-                                    <input type="text" id="horas_ingeriu" class="qh" placeholder="00:00">
+                                    <input type="text" id="horas_ingeriu" class="qh" placeholder="HH:MM">
                                 </div>
                             </div>
                         </div>
@@ -177,8 +177,7 @@
                         <div>
                             <div class="destaque2">
                                 <label for="data">Data:</label><br>
-                                <input type="text" id="data" class="form-control" placeholder="dd/mm/aaaa"
-                                    data-mask="00/00/0000" maxlength="10" autocomplete="off">
+                                <input type="text" id="data" placeholder="Data"/>
                             </div>
 
                             <div class="destaque2">
@@ -218,12 +217,12 @@
 
                             <div class=" destaque2">
                                 <label for="fone">Fone:</label><br>
-                                <input type="text" id="fone" class="qt" placeholder="0000-0000">
+                                <input type="text" id="fone" class="qt" placeholder="(00) 00000-0000">
                             </div>
 
                             <div class="destaque2">
-                                <label for="cpf">RG/CPF Paciente:</label><br>
-                                <input type="text" class="qt" id="cpf" placeholder="000.000.000-00">
+                                <label for="cpf">CPF Paciente:</label><br>
+                                <input type="text" class="qt" id="cpf" placeholder="(000.000.000-00)">
                             </div>
 
                             <div class="destaque2">
@@ -327,7 +326,7 @@
                         <div class="destaque2">
                             <div class="duo">
                                 <div>Que horas iniciaram as contrações?</div>
-                                <input type="number" class="qh" id="h-contracoes" placeholder="00:00">
+                                <input type="number" class="qh" id="h-contracoes" placeholder="HH:MM">
                             </div>
                         </div>
 
@@ -412,7 +411,7 @@
                         <div class="destaque2">
                             <div class="duo">
                                 <div>Hora do nascimento:</div>
-                                <input type="text" class="qh" placeholder="00:00">
+                                <input type="text" class="qh" placeholder="HH:MM">
                             </div>
                         </div>
 
@@ -2222,10 +2221,10 @@
                                         placeholder="Digite" />
                                     portador da carteira de indentidade RG N°
                                     <input type="text" class="form-control cpf-mask" id="id_rg_paciente"
-                                        name="id_rg_paciente" placeholder="000.000.000-00">
+                                        name="id_rg_paciente" placeholder="(00.000.000-0)">
                                     inscrito no CPF sob N°
                                     <input type="text" class="form-control cpf-mask" id="id_cpf_paciente"
-                                        name="id_cpf_paciente" placeholder="000.000.000-00">
+                                        name="id_cpf_paciente" placeholder="(000.000.000-00)">
                                     na qualidade de vítima/paciente, usando dos direitos que a lei me garante,
                                     me recuso neste ato o atendimento e/ou transporte oferecido pelos bombeiros
                                     voluntários de Guaramirim/SC, e assumo, individualmente a responsabilidade
@@ -3074,39 +3073,6 @@
             }
         </script>
         <script>
-            // Função para aplicar a máscara de telefone
-            function applyPhoneMask(input) {
-                input.addEventListener('input', function (e) {
-                    let value = e.target.value.replace(/\D/g, '');
-                    if (value.length === 11) {
-                        e.target.value = value.replace(/^(\d{2})(\d{5})(\d{4})$/, '($1) $2-$3');
-                    } else {
-                        e.target.value = value.replace(/^(\d{2})(\d{4})(\d{4})$/, '($1) $2-$3');
-                    }
-                });
-            }
-
-            // Função para aplicar a máscara de CPF
-            function applyCPFMask(input) {
-                input.addEventListener('input', function (e) {
-                    let value = e.target.value.replace(/\D/g, '');
-                    e.target.value = value.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
-                });
-            }
-
-            // Selecione os campos de entrada de telefone e CPF pelo ID
-            const phoneInput = document.getElementById('fone');
-            const cpfInput = document.getElementById('cpf');
-
-            // Aplique as máscaras aos campos de entrada
-            if (phoneInput) {
-                applyPhoneMask(phoneInput);
-            }
-            if (cpfInput) {
-                applyCPFMask(cpfInput);
-            }
-        </script>
-        <script>
             function validarForm() {
                 var localizacaoFrente = document.getElementById("localizacao-frente").value;
                 var localizacaoVerso = document.getElementById("localizacao-verso").value;
@@ -3134,6 +3100,22 @@
             for (var i = 0; i < checkboxes.length; i++) {
                 checkboxes[i].style.display = "block"; // ou qualquer outro valor de exibição desejado
             }
+        </script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+        <script>
+        $(document).ready(function(){
+          $('#data').mask('00/00/0000');
+          $('#cpf').mask('000.000.000-00');
+          $('#rg').mask('00.000.000-0');
+          $('#telefone').mask('(00) 00000-0000');
+          $('#hora').mask('00:00', {translation: {
+            '0': {pattern: /[0-2]/}, 
+            '1': {pattern: /[0-9]/}, 
+            '2': {pattern: /[0-5]/}, 
+            '3': {pattern: /[0-9]/}
+          }});
+        });
         </script>
 </body>
 
