--- a/bombeirosSAgi/index.html
+++ b/bombeirosSAgi/index.html
@@ -117,16 +117,15 @@
         <div class="heading">Cadastro</div>
         <form action="cadastro.php" method="POST" class="form">
             <input required class="input" type="email" name="email" id="email" placeholder="E-mail">
-            <input required class="input" type="senha" name="senha" id="senha" placeholder="Senha">
+            <input required class="input" type="password" name="senha" id="senha" placeholder="Senha">
             <span class="forgot-password"><a href="">;-;</a></span>
             <button class="login-button" type="submit" name="enviar">Cadastrar</button>
         </form>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
 
 </body>
 
