--- a/bombeirosSAgi/ficha.html
+++ b/bombeirosSAgi/ficha.html
@@ -31,7 +31,7 @@
             <form class="form" id="ocorrencia-form" action="ficha.php" method="post">
                 <div class="form-group">
 
-                    <fieldset>
+                    <fieldset id="id_anamnese_emergencia">
                         <legend>Anamnese da Emergência Médica</legend>
                         <div>
                             <div class="destaque2">
@@ -172,12 +172,12 @@
 
                     <br>
 
-                    <fieldset>
-                        <legend id="Dadosiniciais">Dados Iniciais</legend>
+                    <fieldset id="id_dadosambulancia">
+                        <legend>Dados Iniciais</legend>
                         <div>
                             <div class="destaque2">
                                 <label for="data">Data:</label><br>
-                                <input type="text" id="data" placeholder="Data"/>
+                                <input type="text" id="data" placeholder="Data" />
                             </div>
 
                             <div class="destaque2">
@@ -189,11 +189,23 @@
                                         Feminino
                                     </label>
 
-                                    <input class="maredes-input" name="maredes-group-6" id="maredes12" type="radio">
+                                    <input class="maredes-input" name="maredes-group-6" id="maredes12" type="radio"
+                                        value="masculino" onchange="esconderTabela(this.value)">
                                     <label class="maredes-label" for="maredes12">
                                         <span class="maredes-inner-circle"></span>
                                         Masculino
                                     </label>
+
+                                    <script>
+                                        function esconderTabela(valor) {
+                                            var tabela = document.getElementById('id_anamnesegestacional');
+                                            if (valor == 'masculino') {
+                                                tabela.style.display = 'none';
+                                            } else {
+                                                tabela.style.display = 'block';
+                                            }
+                                        }
+                                    </script>
                                 </div>
                             </div>
 
@@ -247,7 +259,7 @@
 
                     <br>
 
-                    <fieldset>
+                    <fieldset id="id_anamnesegestacional">
                         <legend>Anamnese Gestacional</legend>
                         <div class="destaque2">
                             <div>Período da gestação</div>
@@ -1199,8 +1211,8 @@
                                         name="abdomem_sensivel" value="abdomem_sensivel">
                                     <label for="id_sinaissintomas">Abdomem sensível</label>
                                     <br>
-                                    <input type="checkbox" class="espacito" id="abdomem_rigido"
-                                        name="abdomem_rigido" value="abdomem_rigido">
+                                    <input type="checkbox" class="espacito" id="abdomem_rigido" name="abdomem_rigido"
+                                        value="abdomem_rigido">
                                     <label for="id_sinaissintomas">Abdomem Rígido</label>
                                 </div>
                             </div>
@@ -3104,18 +3116,20 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
         <script>
-        $(document).ready(function(){
-          $('#data').mask('00/00/0000');
-          $('#cpf').mask('000.000.000-00');
-          $('#rg').mask('00.000.000-0');
-          $('#telefone').mask('(00) 00000-0000');
-          $('#hora').mask('00:00', {translation: {
-            '0': {pattern: /[0-2]/}, 
-            '1': {pattern: /[0-9]/}, 
-            '2': {pattern: /[0-5]/}, 
-            '3': {pattern: /[0-9]/}
-          }});
-        });
+            $(document).ready(function () {
+                $('#data').mask('00/00/0000');
+                $('#cpf').mask('000.000.000-00');
+                $('#rg').mask('00.000.000-0');
+                $('#telefone').mask('(00) 00000-0000');
+                $('#hora').mask('00:00', {
+                    translation: {
+                        '0': { pattern: /[0-2]/ },
+                        '1': { pattern: /[0-9]/ },
+                        '2': { pattern: /[0-5]/ },
+                        '3': { pattern: /[0-9]/ }
+                    }
+                });
+            });
         </script>
 </body>
 
