--- a/bombeirosSAgi/ficha.html
+++ b/bombeirosSAgi/ficha.html
@@ -91,7 +91,7 @@
 
                             <div class="destaque2">
                                 <div>Faz uso de medicação</div>
-                                <div class="maredes-group">
+                                <div class="maredes-group" id="faz_uso_medicacao">
                                     <input class="maredes-input" name="maredes-group-3" id="maredes5" type="radio">
                                     <label class="maredes-label" for="maredes5">
                                         <span class="maredes-inner-circle"></span>
