--- a/bombeirosSAgi/index.html
+++ b/bombeirosSAgi/index.html
@@ -120,6 +120,8 @@
             <input required class="input" type="password" name="senha" id="senha" placeholder="Senha">
             <span class="forgot-password"><a href="">;-;</a></span>
             <button class="login-button" type="submit" name="enviar">Cadastrar</button>
+            <span class="forgot-password"><a href="">Já tem Login?</a></span>
+            <button><a href="login.html">Login</a></button>
         </form>
     </div>
 
