--- a/bombeirosSAgi/ficha.html
+++ b/bombeirosSAgi/ficha.html
@@ -172,12 +172,12 @@
 
                     <br>
 
-                    <fieldset id="id_dadosambulancia">
+                    <fieldset id="id_dados_iniciais">
                         <legend>Dados Iniciais</legend>
                         <div>
                             <div class="destaque2">
                                 <label for="data">Data:</label><br>
-                                <input type="text" id="data" placeholder="Data" />
+                                <input type="text" id="ddi_data" placeholder="Data" />
                             </div>
 
                             <div class="destaque2">
@@ -224,7 +224,7 @@
                             <div class="destaque2">
                                 <label for="">Idade:</label><br>
                                 <input type="text" class="form-control" id="idade" name="idade"
-                                    placeholder="Digite a idade do paciente" pattern="[0-9]">
+                                    placeholder="Digite a idade do paciente">
                             </div>
 
                             <div class=" destaque2">
