--- a/bombeirosSAgi/index.html
+++ b/bombeirosSAgi/index.html
@@ -34,7 +34,7 @@
         }
 
         .logo img {
-            max-width: 60%;
+            max-width: 40%;
             height: auto;
         }
 
@@ -121,7 +121,7 @@
             <span class="forgot-password"><a href="">;-;</a></span>
             <button class="login-button" type="submit" name="enviar">Cadastrar</button>
             <span class="forgot-password"><a href="">Já tem Login?</a></span>
-            <button><a href="login.html">Login</a></button>
+            <a href="login.html">Login</a>
         </form>
     </div>
 
